--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/asset/image/favicon_game.png",
+      "src": "/asset/image/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/asset/image/favicon_game.png",
+      "src": "/asset/image/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
