--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Game Edukasi Perkalian",
+  "name": "KaliKu",
   "short_name": "Perkalian",
   "start_url": "/html/halaman-utama.html",
   "scope": "/",
